Addressed review comments and added tests
Signed-off-by: Krishna Kondaka <krishkdk@amazon.com>